--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Hello World</title>
     </head>
     <body>
-        <H1>hello world!</H1>
+        <h1>hello world!</h1>
     </body>
 </html>
