--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h1>hello world!!!!</h1>
+        <div class="menu">
+            <div class="top"></div>
+            <div class="bottom"></div>
+        </div>
+        <div class="top_story">
+            <div class="story"></div>
+            <div class="story"></div>
+            <div class="story"></div>
+            <div class="story"></div>
+        </div>
+        <div class="main">
+            <div class="left">
+                <div class="article">
+                    <div class="votes"></div>
+                    <div class="comments"></div>
+                </div>
+                <div class="article">
+                    <div class="votes"></div>
+                    <div class="comments"></div>
+                </div>
+                <div class="article">
+                    <div class="votes"></div>
+                    <div class="comments"></div>
+                </div>
+                <div class="article">
+                    <div class="votes"></div>
+                    <div class="comments"></div>
+                </div>
+                <div class="article">
+                    <div class="votes"></div>
+                    <div class="comments"></div>
+                </div>
+                <div class="article">
+                    <div class="votes"></div>
+                    <div class="comments"></div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="wigets"></div>
+                <div class="wigets"></div>
+                <div class="wigets"></div>
+                <div class="wigets"></div>
+                <div class="wigets"></div>
+            </div>
+        </div>
     </body>
 </html>
