update to breakpoint example

--- a/reddit.html
+++ b/reddit.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Art 300 - Anthony Warnick</title>
     </head>
-    <body>
+    <body class="reddit">
         <div class="menu">
             <div class="super_menu"></div>
             <div class="filters"></div>
