--- a/src/info.html
+++ b/src/info.html
@@ -33,10 +33,9 @@ layout: layouts/base.njk
   <div class="info__links">
     <div class="label">Links:</div>
     <ul>
-      <li><a href="http://h-rd.co/">HRD</a></li>
-      <li><a href="https://github.com/">Github</a></li>
-      <li><a href="http://h-rd.co/">HRD</a></li>
-      <li><a href="https://github.com/">Github</a></li>
+      <li><a href="https://tumblr.anthonywarnick.com/">tumblr</a></li>
+      <li><a href="https://www.are.na/anthony-warnick/">are.na</a></li>
+      <li><a href="https://github.com/ajwarnick/">github</a></li>
     </ul>
   </div>
   <div class="info__recent">
